# telegram-assinaturas-bot

./: Pipfile  app.py  bot.py  main.py  mercado_pago.py  pyproject.toml  requirements.txt
telegram_assinaturas_bot/: bot.py  callbacks_datas.py  config.py  consts.py  database.py  models.py  repository.py  utils.py
telegram_assinaturas_bot/extensions/: accounts.py  categories.py  configure_bot.py  members.py  payment_gateway.py  plans.py  send_message.py  signatures.py  subscribers.py  users.py
telegram_grupo_vip_bot/: callbacks_datas.py  database.py  models.py  repository.py  utils.py
telegram_grupo_vip_bot/extensions/: plans.py  send_message.py  signatures.py  subscribers.py  users.py
